--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Install OctoPrint
+      run: |
+        python -m pip install --upgrade pip
+        pip install OctoPrint
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
