--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Get the version
       id: get_version
       # run: echo ::set-output name=VERSION::$(python setup.py --version)
-      run: echo "{VERSION}={$(python setup.py --version)}" >> $GITHUB_OUTPUT
+      run: echo "{VERSION}={$(python setup.py --version | sed 's/}//g')}" >> $GITHUB_OUTPUT
 
     - name: Create Release
       id: create_release
