--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,7 @@ jobs:
 
     - name: Get the version
       id: get_version
-      # run: echo ::set-output name=VERSION::$(python setup.py --version)
-      run: echo "VERSION=$(python setup.py --version)" >> $GITHUB_OUTPUT
+      run: echo echo "VERSION=$(python setup.py --version | tail -n 1)" >> $GITHUB_OUTPUT
 
     - name: Create Release
       id: create_release
